# castmind

./: .env.example  .gitignore  .pre-commit-config.yaml  API_Key_测试报告.md  BRAND_ORIGINAL.md  CHANGELOG-DOCKER.md  CHANGELOG.md  Dockerfile  Docker化实施计划.md  Docker化缺失功能清单.md  Docker化需求分析.md  GITHUB_SETUP.md  Makefile  Obsidian集成配置指南.md  README-CASTMIND-ZOO.md  README-DOCKER.md  README.md  RSS_配置指南.md  SSL_修复完成报告.md  ZooFramework_FastAPI_集成决策.md  ZooFramework_FastAPI_集成架构分析.md  add_chinese_podcasts.py  castmind.py  castmind_service.py  castmind_ssl_patched.py  castmind_test_mode.py  config.example.json  config_obsidian_output.py  deploy-nas.sh  deploy.sh  docker-compose.nas.yml  docker-compose.yml  find_zhixing_rss.py  fix_ssl_temporary.py  import_commands.sh  install.sh  migrate_subscriptions.py  migrate_subscriptions_auto.py  migrate_to_obsidian.sh  package.json  (+39 more)
.github/workflows/: ci-cd.yml  ci.yml  publish-images.yml
backend/: main.py  start_castmind.sh
backend/app/: __init__.py
backend/app/api/v1/: __init__.py  articles.py  feeds.py  system.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/scheduler/: __init__.py  manager.py  tasks.py
backend/app/services/: __init__.py  ai_service.py  feed_service.py  podcast_downloader.py  podcast_service.py  rss_service.py  rsshub_service.py  transcription_service.py
backend/app/workers/: __init__.py  ai_analyzer.py  content_parser.py  feed_fetcher.py
backend/scripts/: fix_database.py  migrate_add_columns.py  migrate_database.py  migrate_phase1.py  migrate_podcast.py
config/: .env.example  ai_models.json  obsidian_output.json  workflows.json
data/notes/: 20260219_185316_Police statement in full after Andrew arrest.md  20260219_193240_E224 年终金钱树洞比数字更复杂的是爱与期待小酒馆故事会.md  test_note.md
data/summaries/: 20260219_185316_summary.md  20260219_193240_summary.md  test_summary.md
docs/: CORE_REQUIREMENTS_PROMPT.md  EXECUTION_PLAN.md  PUSH_TO_GITHUB.md  README.md  UV_PYDANTIC_FIX.md  UV_SETUP_GUIDE.md  项目总结.md
docs/api/: README.md  core.md
docs/deployment/: README.md
docs/development/: README.md
docs/troubleshooting/: README.md
docs/user-guide/: README.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: AddFeedModal.tsx  SearchModal.tsx  Skeleton.tsx
frontend/src/pages/: Articles.tsx  Dashboard.tsx  Excerpts.tsx  Feeds.tsx  Podcasts.tsx  System.tsx
scripts/: demo_coding_agent.py  generate_requirements.py  opencode_examples.sh  update_help_integration.py
skills/castmind-optimizer/: README.md  SKILL.md
skills/castmind-optimizer/artifacts/: CLAUDE_PROGRESS.md  feature_list.json  init.sh
skills/castmind-optimizer/references/: api_endpoints.md  coding_standards.md  database_models.md  frontend_pages.md  project_structure.md  ux_audit.md  workflow.md
skills/castmind-optimizer/scripts/: agent_loop.sh
src/castmind_zoo/: __init__.py  config.py  master.py
src/castmind_zoo/api/: dependencies.py
src/castmind_zoo/api/routers/: health.py  tasks.py  workers.py
src/cli/: __init__.py  help.py
src/core/: config.py  config_validator.py  help_system.py
src/workflow/: rss_parser.py
tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_services.py  test_utils.py
